# photomanager

./: .gitattributes  .gitignore  .gitmodules  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  database.py  dbless  hasher_async.py  photomanager.py  pyexiftool.py  pyexiftool_async.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: codeql-analysis.yml  main.yml
benchmarking/: bench_database.py  bench_indexing.py
benchmarks/: bench_database.py  bench_indexing.py
build_backend/: __init__.py  build_backend.py
photomanager/: __init__.py  database.py  hasher_async.py  photomanager.py  pyexiftool_async.py
src/photomanager/: __init__.py  __main__.py  _version.py  async_base.py  cli.py  database.py  hasher.py  hasher_async.py  photofile.py  photomanager.py  pyexiftool.py  pyexiftool_async.py
src/photomanager/actions/: actions.py  fileops.py  migrate.py
src/photomanager/pyexiftool/: __init__.py  pyexiftool.py  pyexiftool_async.py
stubs/blake3/: blake3.pyi
tests/integ_tests/: test_actions.py  test_cli.py  test_database.py  test_hasher.py  test_photofile.py  test_photomanager.py  test_pyexiftool.py
tests/test_files/C/: img3.tiff
tests/unit_tests/: __init__.py  test_actions.py  test_async_base.py  test_cli.py  test_cli_no_cmi.py  test_database.py  test_datetime.py  test_hasher.py  test_photofile.py  test_photomanager.py  test_pyexiftool.py
