[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/photomanager/_version.py"
write_to_template = '''version = "{version}"
'''

[tool.black]
line-length = 88
target-version = ['py310']
include = '^/(src|tests|benchmarks|stubs)/.*\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
(
    ^/src/photomanager/_version[.]py
  | ^/src/photomanager/check_media_integrity/
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = ["src/photomanager/check_media_integrity/*"]
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
markers = [
    "datafiles",
]
filterwarnings = [
    "ignore:.*the imp module is deprecated.*:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
mypy_path = [
    "src",
    "stubs",
]
exclude = [
    "photomanager/check_media_integrity/test_damage[.]py$",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/typestubs",
    "src/photomanager/check_media_integrity/test_damage.py",
]
defineConstant = { DEBUG = true }
stubPath = "stubs"
venv = "venv"
venvPath = "./"

reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
extend-exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/typestubs",
    "src/photomanager/check_media_integrity",
]
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"__init__.pyi" = ["F403"]
