[metadata]
name = photomanager
description = Collect photos into a central repository
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
version = attr: photomanager.version
author = Aaron Kollasch
author_email = aaron@kollasch.dev
url = https://github.com/aaronkollasch/photomanager
project_urls =
    Source = https://github.com/aaronkollasch/photomanager
    Tracker = https://github.com/aaronkollasch/photomanager/issues
license = MIT
keywords = photo video manager archive duplicate async checksum database
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    tqdm>=4.59.0
    click>=7.1.2
    orjson>=3.5.2
    zstandard>=0.15.2
    xxhash>=2.0.2
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = True
scripts =
    dbless

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    photomanager = photomanager.photomanager:main

[options.extras_require]
test =
    tox
    pytest

# content of: tox.ini , put in same dir as setup.py
[tox:tox]
envlist = py38,py39

[testenv]
# install pytest in the virtualenv where commands will be executed
deps = pytest
commands =
# NOTE: you can run any command line tool here - not just tests
    pytest

