[metadata]
name = photomanager
author = Aaron Kollasch
author_email = aaron@kollasch.dev
description = Collect photos into a central repository
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst; charset=UTF-8
version = attr: photomanager.version
url = https://github.com/aaronkollasch/photomanager
project_urls =
    Source = https://github.com/aaronkollasch/photomanager
    Tracker = https://github.com/aaronkollasch/photomanager/issues
license = MIT
license_file = LICENSE.rst
keywords = photo video manager archive duplicate async checksum database
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    tqdm>=4.59.0
    click>=7.1.2
    orjson>=3.5.2
    zstandard>=0.15.2
    xxhash>=2.0.2
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = True
scripts =
    dbless

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    photomanager = photomanager.photomanager:main

[options.extras_require]
test =
    tox
    pytest

# content of: tox.ini , put in same dir as setup.py
[tox:tox]
envlist = linters, py38, py39

[testenv]
# install pytest in the virtualenv where commands will be executed
deps = pytest
commands =
# NOTE: you can run any command line tool here - not just tests
    pytest

[testenv:linters]
deps =
    black
    flake8
    flake8-black
commands =
    black --check --diff .
    flake8 --count src

[flake8]
max-line-length = 88
ignore =
extend-ignore =
# See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude = .*/, build, __pycache__, *.egg

[bdist_wheel]
universal = 1
