[metadata]
name = photomanager
author = Aaron Kollasch
author_email = aaron@kollasch.dev
description = Collect photos into a central repository
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst; charset=UTF-8
version = attr: photomanager.version
url = https://github.com/aaronkollasch/photomanager
project_urls =
    Source = https://github.com/aaronkollasch/photomanager
    Tracker = https://github.com/aaronkollasch/photomanager/issues
license = MIT
license_file = LICENSE
keywords = photo video manager archive duplicate async checksum database
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
install_requires =
    tqdm>=4.59.0
    click>=7.1.2
    orjson>=3.5.2
    zstandard>=0.15.2
    xxhash>=2.0.2
    blake3>=0.2.1
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = True
scripts =
    dbless

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    photomanager = photomanager.__main__:main

[options.extras_require]
test =
    tox
    pytest
    pytest-datafiles
    coverage

# content of: tox.ini , put in same dir as setup.py
[tox:tox]
envlist = linters, twine, py38, py39, coverage-report
isolated_build = True
requires = tox-conda; platform_system=="Darwin"

[gh-actions]
python =
    3.8: py38, linters
    3.9: py39,

[testenv]
# install pytest in the virtualenv where commands will be executed
deps =
    pytest
    pytest-datafiles
    coverage
;install_command = pip install --no-compile {opts} {packages}
commands =
    coverage run -m pytest

[testenv:linters]
deps =
    black
    flake8
    flake8-black
commands =
    black --check --diff .
    flake8 --count src tests

[testenv:twine]
deps =
    build>=0.4.0
    twine>=3.4.1
skip_install = true
commands =
    python -m build --sdist --wheel .
    python -m twine check dist/*

[testenv:coverage-report]
deps = coverage
skip_install = true
parallel_show_output = true
depends =
    py38
    py39
commands =
    coverage combine
    coverage report

[flake8]
max-line-length = 88
ignore =
per-file-ignores = __init__.py:F401
extend-ignore =
# See https://github.com/PyCQA/pycodestyle/issues/373
    E203,W503
exclude = .*/, build, __pycache__, *.egg, src/photomanager/_version.py

[coverage:run]
branch = True
parallel = True
source = photomanager
omit =
    */photomanager/_version.py

[coverage:paths]
source =
    src
    .tox/*/site-packages

[coverage:report]
show_missing = true
skip_covered = true
omit =
    src/photomanager/actions/migrate.py
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError
    if __name__ == .__main__.:
    # typing-related code
    ^if (False|TYPE_CHECKING):
    : \\.\\.\\.$
    ^ +\\.\\.\\.$
    -> ['\"]?NoReturn['\"]?:

[bdist_wheel]
universal = 1
